--- a/model_map/src/main/res/layout/activity_map_poi.xml
+++ b/model_map/src/main/res/layout/activity_map_poi.xml
@@ -4,6 +4,8 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <include layout="@layout/toolbar_layout"/>
+
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -17,7 +19,7 @@
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:layout_gravity="center"
-            android:src="@color/album_IconDark" />
+            android:src="@drawable/solid_ebecef_dp45" />
 
     </FrameLayout>
 
