--- a/library_common/src/main/res/values/styles.xml
+++ b/library_common/src/main/res/values/styles.xml
@@ -53,9 +53,9 @@
 
     <style name="SwipeBackLayout">
         <item name="edge_size">50dp</item>
-        <item name="shadow_left">@drawable/shadow_left</item>
-        <item name="shadow_right">@drawable/shadow_right</item>
-        <item name="shadow_bottom">@drawable/shadow_bottom</item>
+        <item name="shadow_left">@mipmap/shadow_left</item>
+        <item name="shadow_right">@mipmap/shadow_right</item>
+        <item name="shadow_bottom">@mipmap/shadow_bottom</item>
     </style>
 
 </resources>
