--- a/model_map/src/main/res/layout/activity_map.xml
+++ b/model_map/src/main/res/layout/activity_map.xml
@@ -4,6 +4,8 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <include layout="@layout/toolbar_layout"/>
+
     <Button
         android:id="@+id/btnPoi"
         android:layout_width="wrap_content"
